ADMIN initializer adjusted + UsuariosService User retrieval by username fix